@@ -1012,7 +1012,11 @@ typedef int rlim_t;
 #define USE_MMAP_FILES
 #define HAVE_SYSLOG 1
 #define HAVE_FCNTL_SERIALIZED_ACCEPT
+#define HAVE_PTHREAD_SERIALIZED_ACCEPT
 #define SINGLE_LISTEN_UNSERIALIZED_ACCEPT
+#if !defined(USE_FNCTL_SERIALIZED_ACCEPT)
+#define USE_PTHREAD_SERIALIZED_ACCEPT
+#endif
 
 
 #else
